--- a/qof/emdebian/changelog
+++ b/qof/emdebian/changelog
@@ -1,3 +1,9 @@
+qof (0.6.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Neil Williams <linux@codehelp.co.uk>  Tue,  4 Apr 2006 21:08:00 +0100
+
 qof (0.6.3-1) unstable; urgency=low
 
   * New upstream release.
