--- a/qof/po/en_GB.po
+++ b/qof/po/en_GB.po
@@ -1,25 +1,26 @@
 # English-GB for QOF
 # Copyright (C) 2005 Neil Williams <linux@codehelp.co.uk>
 # This file is distributed under the same license as the qof package.
-# Neil Williams <linx@codehelp.co.uk>, 2005.
+# Neil Williams <linux@codehelp.co.uk>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: QOF 0.6.1\n"
+"Project-Id-Version: QOF 0.6.4\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2006-03-10 21:49+0000\n"
-"PO-Revision-Date: 2005-12-31 13:15+0000\n"
-"Last-Translator: Neil Williams <linx@codehelp.co.uk>\n"
+"POT-Creation-Date: 2006-04-11 20:17+0100\n"
+"PO-Revision-Date: 2006-04-11 20:22+0100\n"
+"Last-Translator: Neil Williams <linux@codehelp.co.uk>\n"
 "Language-Team: English (British) <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: ../backend/file/qsf-backend.c:90
+#: ../backend/file/qsf-backend.c:103
 msgid "Level of compression to use: 0 for none, 9 for highest."
 msgstr "Level of compression to use: 0 for none, 9 for highest."
 
-#: ../backend/file/qsf-backend.c:91
+#: ../backend/file/qsf-backend.c:104
 msgid ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
@@ -27,14 +28,27 @@ msgstr ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
 
-#: ../backend/file/qsf-backend.c:99
+#: ../backend/file/qsf-backend.c:112
 msgid "List of QSF map files to use for this session."
 msgstr "List of QSF map files to use for this session."
 
-#: ../backend/file/qsf-backend.c:100
+#: ../backend/file/qsf-backend.c:113
 msgid ""
 "QOF can convert objects within QSF XML files using a map of the changes "
 "required."
 msgstr ""
 "QOF can convert objects within QSF XML files using a map of the changes "
 "required."
+
+#: ../backend/file/qsf-backend.c:121
+msgid "Encoding string to use when writing the XML file."
+msgstr "Encoding string to use when writing the XML file."
+
+#: ../backend/file/qsf-backend.c:122
+msgid ""
+"QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
+"string in this option."
+msgstr ""
+"QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
+"string in this option."
+
