build and install Doxygen API reference automatically

--- a/qof/doc/README
+++ b/qof/doc/README
@@ -3,9 +3,9 @@
                     -----------------
 
 The QOF documentation is embedded in the source code (mostly
-in the header files) using 'doxygen' (JavaDoc style) markup.
+in the header files) using 'doxygen' markup.
 
-To extract the documentation into HTML pages, you must install
-the 'doxygen' documentation system, and then say 'make doc'. 
-The HTML docuemtnation will be placed in the 'html' subdirectory.
+The documentation is built directly from the source code
+when building from CVS source.
 
+The HTML docuemtnation is placed in the 'html' subdirectory.
