--- a/qof/po/sv.po
+++ b/qof/po/sv.po
@@ -1,40 +1,40 @@
 # Swedish translation of qof.
-# Copyright (C) 2006 Free Software Foundation, Inc. 
+# Copyright (C) 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the qof package.
 # Daniel Nylander <po@danielnylander.se>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: qof 0.6.1\n"
+"Project-Id-Version: qof 0.6.4\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2006-03-10 21:49+0000\n"
-"PO-Revision-Date: 2006-01-04 17:17+0100\n"
+"POT-Creation-Date: 2006-04-11 20:17+0100\n"
+"PO-Revision-Date: 2006-05-19 22:58+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../backend/file/qsf-backend.c:90
+#: ../backend/file/qsf-backend.c:103
 msgid "Level of compression to use: 0 for none, 9 for highest."
 msgstr "Komprimeringsnivå att använda: 0 för ingen, 9 för högsta."
 
-#: ../backend/file/qsf-backend.c:91
-msgid ""
-"QOF can compress QSF XML files using gzip. Note that compression is not used "
-"when outputting to STDOUT."
-msgstr ""
-"QOF kan komprimera QSF XML-filer med gzip. Notera att komprimering inte "
-"används när data skickas till standard ut."
+#: ../backend/file/qsf-backend.c:104
+msgid "QOF can compress QSF XML files using gzip. Note that compression is not used when outputting to STDOUT."
+msgstr "QOF kan komprimera QSF XML-filer med gzip. Notera att komprimering inte används när data skickas till standard ut."
 
-#: ../backend/file/qsf-backend.c:99
+#: ../backend/file/qsf-backend.c:112
 msgid "List of QSF map files to use for this session."
 msgstr "Lista av QSF-kartfiler att använda för denna session."
 
-#: ../backend/file/qsf-backend.c:100
-msgid ""
-"QOF can convert objects within QSF XML files using a map of the changes "
-"required."
-msgstr ""
-"QOF kan konvertera objekt inom QSF XML-filer med en karta av de ändringar "
-"som krävs."
+#: ../backend/file/qsf-backend.c:113
+msgid "QOF can convert objects within QSF XML files using a map of the changes required."
+msgstr "QOF kan konvertera objekt inom QSF XML-filer med en karta av de ändringar som krävs."
+
+#: ../backend/file/qsf-backend.c:121
+msgid "Encoding string to use when writing the XML file."
+msgstr "Teckenkodningssträng att använda när XML-fil skrivs."
+
+#: ../backend/file/qsf-backend.c:122
+msgid "QSF defaults to UTF-8. Other encodings are supported by passing the encoding string in this option."
+msgstr "Standard i QSF är UTF-8. Övriga teckenkodningar stöds genom att skicka med kodningssträngen i detta alternativ."
