--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-20 Daniel Nylander <po@danielnylander.se>
+
+	* sv.po : Updated Swedish translation for 0.6.4
+
 2005-12-31  Neil Williams <linux@codehelp.co.uk>
 
 	* en_GB.po : Updated for 0.6.1 release.
